Revert back to 1.20.1
Undo changes to bring the mod back to the most recent version compatible with 1.20.1.